--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#8BC34A</color>
     <color name="colorPrimaryDark">#689F38</color>
     <color name="colorPrimaryLight">#DCEDC8</color>
-    <color name="colorAccent">#f39c12</color>
+    <color name="colorAccent">#e67e22</color>
 </resources>
