--- a/app/src/main/res/layout/fragment_recipe_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.irfankhoirul.recipe.modul.recipe.RecipeListFragment">
+    tools:context="com.irfankhoirul.recipe.modul.recipe.RecipeFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_recipes"
