--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.irfankhoirul.recipe.modul.recipe_detail.RecipeDetailActivity">
+    android:orientation="horizontal"
+    tools:context="com.irfankhoirul.recipe.modul.step.StepActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <include layout="@layout/layout_step_list" />
+
+</LinearLayout>
