--- a/app/src/main/res/layout/fragment_step_list.xml
+++ b/app/src/main/res/layout/fragment_step_list.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.irfankhoirul.recipe.modul.step.StepListFragment">
+    tools:context="com.irfankhoirul.recipe.modul.step.StepFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_step"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp" />
 
 </FrameLayout>
