--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_ingredient"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -13,6 +14,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_weight="5"
+        android:textSize="16sp"
         tools:text="Graham Cracker crumbs" />
 
     <TextView
@@ -21,18 +23,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:gravity="center_horizontal"
-        tools:text="100" />
-
-    <TextView
-        android:id="@+id/tv_unit"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_weight="1"
-        android:gravity="center_horizontal"
-        tools:text="Grams" />
+        android:textSize="16sp"
+        tools:text="100 TBSP" />
 
 </LinearLayout>
