--- a/app/src/main/res/layout/activity_step_detail.xml
+++ b/app/src/main/res/layout/activity_step_detail.xml
@@ -1,8 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.irfankhoirul.recipe.modul.step_detail.StepDetailActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <FrameLayout
+        android:id="@+id/fl_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorAccent" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_previous_step"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:drawableLeft="@drawable/ic_chevron_left_black_24dp"
+            android:drawableStart="@drawable/ic_chevron_left_black_24dp"
+            android:ellipsize="end"
+            android:foreground="?android:selectableItemBackground"
+            android:gravity="center_vertical|start"
+            android:maxLines="1"
+            android:padding="16dp"
+            tools:text="Prepare The Menu" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/colorAccent" />
+
+        <TextView
+            android:id="@+id/tv_next_step"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
+            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
+            android:ellipsize="end"
+            android:foreground="?android:selectableItemBackground"
+            android:gravity="center_vertical|end"
+            android:maxLines="1"
+            android:padding="16dp"
+            tools:text="Taste The Menu" />
+
+    </LinearLayout>
+
+</LinearLayout>
