--- a/app/src/main/res/layout/item_step.xml
+++ b/app/src/main/res/layout/item_step.xml
@@ -14,8 +14,16 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <View
+            android:id="@+id/v_step_connector_top"
+            android:layout_width="2dp"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -24,10 +32,11 @@
             app:srcCompat="@drawable/ic_circle_black_24dp" />
 
         <View
-            android:id="@+id/v_step_connector"
+            android:id="@+id/v_step_connector_bottom"
             android:layout_width="2dp"
-            android:layout_height="24dp"
+            android:layout_height="0dp"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:background="@color/colorPrimary" />
     </LinearLayout>
 
@@ -35,10 +44,10 @@
         android:id="@+id/tv_step_short_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
+        android:layout_marginBottom="16dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="-8dp"
+        android:layout_marginTop="16dp"
         android:clickable="true"
         android:foreground="?android:selectableItemBackground"
         android:padding="8dp"
