--- a/app/src/main/res/layout/activity_step_detail.xml
+++ b/app/src/main/res/layout/activity_step_detail.xml
@@ -6,18 +6,21 @@
     android:orientation="vertical"
     tools:context="com.irfankhoirul.recipe.modul.step_detail.StepDetailActivity">
 
-    <FrameLayout
-        android:id="@+id/fl_container"
+    <RelativeLayout
+        android:id="@+id/rl_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:gravity="center" />
 
     <View
+        android:id="@+id/v_horizontal"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/colorAccent" />
 
     <LinearLayout
+        android:id="@+id/ll_step_navigation"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:orientation="horizontal">
