--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -10,8 +10,8 @@
     app:cardCornerRadius="4dp"
     app:cardElevation="8dp">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/cl_recipe_container"
+    <RelativeLayout
+        android:id="@+id/rl_recipe_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
@@ -24,62 +24,76 @@
             android:clickable="true"
             android:foreground="?android:selectableItemBackground"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/ic_food_placeholder" />
 
         <View
             android:id="@+id/v_footer"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="64dp"
+            android:layout_alignBottom="@+id/iv_thumbnail"
             android:alpha="0.7"
             android:background="@color/colorPrimaryLight"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_thumbnail"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="@+id/iv_thumbnail"
-            app:layout_constraintRight_toRightOf="@+id/iv_thumbnail" />
+            android:orientation="horizontal" />
 
         <TextView
             android:id="@+id/tv_title"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignTop="@+id/v_footer"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="8dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:layout_toLeftOf="@+id/iv_favorite"
+            android:layout_toStartOf="@+id/iv_favorite"
             android:ellipsize="end"
             android:fontFamily="sans-serif-medium"
             android:maxLines="1"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/v_footer"
-            app:layout_constraintRight_toLeftOf="@+id/iv_favorite"
-            app:layout_constraintTop_toTopOf="@+id/v_footer"
             tools:text="Makaroni Panggang dadakan lima ratusan ribu " />
 
         <ImageView
             android:id="@+id/iv_favorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginTop="0dp"
+            android:layout_alignBottom="@+id/v_footer"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/v_footer"
             android:paddingBottom="16dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingTop="16dp"
             android:tint="@color/colorAccent"
-            app:layout_constraintBottom_toBottomOf="@+id/v_footer"
-            app:layout_constraintRight_toRightOf="@+id/v_footer"
-            app:layout_constraintTop_toTopOf="@+id/v_footer"
             app:srcCompat="@drawable/ic_favorite_border_black_24dp" />
 
-    </android.support.constraint.ConstraintLayout>
+        <ImageView
+            android:id="@+id/iv_serving"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_title"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
+            app:srcCompat="@drawable/ic_person_black_24dp" />
+
+        <TextView
+            android:id="@+id/tv_serving"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/iv_serving"
+            android:layout_below="@+id/tv_title"
+            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
+            android:layout_toEndOf="@+id/iv_serving"
+            android:layout_toRightOf="@+id/iv_serving"
+            android:gravity="center_vertical"
+            android:textSize="16sp"
+            tools:text="99" />
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
