--- a/app/src/main/res/layout/dialog_permission.xml
+++ b/app/src/main/res/layout/dialog_permission.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -14,6 +13,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/content_description_approval_icon"
         android:tint="@color/colorPrimary"
         app:srcCompat="@drawable/ic_verified_user_black_24dp" />
 
@@ -31,8 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
-            android:text="We need to write cache so you can load recipes faster next time."
-            tools:layout_editor_absoluteY="269dp" />
+            android:layout_marginStart="8dp"
+            android:text="@string/label_cache_permission" />
     </LinearLayout>
 
 </LinearLayout>
