--- a/app/src/main/res/layout/recipe_widget.xml
+++ b/app/src/main/res/layout/recipe_widget.xml
@@ -3,17 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryLight"
     android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/ll_no_recipe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryLight"
         android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/iv_no_recipe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_dish" />
@@ -25,7 +26,7 @@
             android:layout_gravity="center"
             android:background="@color/colorAccent"
             android:padding="16dp"
-            android:text="Add Recipe"
+            android:text="@string/label_add_recipe"
             android:textColor="@color/pure_white" />
     </LinearLayout>
 
@@ -33,6 +34,7 @@
         android:id="@+id/ll_ingredient"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryLight"
         android:orientation="vertical"
         android:visibility="gone">
 
