--- a/app/src/main/res/layout-w900dp/activity_recipe_detail.xml
+++ b/app/src/main/res/layout-w900dp/activity_recipe_detail.xml
@@ -38,7 +38,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/container"
+            android:id="@+id/vp_container"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2" />
