--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -7,7 +7,7 @@
     tools:context="com.irfankhoirul.recipe.modul.recipe.RecipeActivity">
 
     <FrameLayout
-        android:id="@+id/fl_container"
+        android:id="@+id/fl_recipe_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
