--- a/app/src/main/res/layout-w600dp/activity_recipe_detail.xml
+++ b/app/src/main/res/layout-w600dp/activity_recipe_detail.xml
@@ -25,7 +25,7 @@
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabMode="scrollable" />
 
